Added the Item Recovery Block
Optimized textures
Changed the Radiant Nether Essence Block texture