@@ -2,8 +2,8 @@ variables:
   CACHE_DIR: "$CI_PROJECT_DIR/build"
   CACHE_DIR2: "$CI_PROJECT_DIR/.gradle"
   
-  ORIG_ARTIFACTS: "$CI_PROJECT_DIR/build/libs/NetherEssence-Forge-*.jar"
-  ARTIFACTS: "$CI_PROJECT_DIR/NetherEssence-Forge-*.jar"
+  ORIG_ARTIFACTS: "$CI_PROJECT_DIR/build/libs/NetherEssence-Forge-1.10.2-*.jar"
+  ARTIFACTS: "$CI_PROJECT_DIR/NetherEssence-Forge-1.10.2-*.jar"
 
 cache:
  paths:
@@ -22,6 +22,6 @@ deploy:
   - cp $ORIG_ARTIFACTS .
   when: manual
   artifacts:
-    name: "NetherEssence-Forge-$(cat $CACHE_DIR/.version)"
+    name: "NetherEssence-Forge-1.10.2-$(cat $CACHE_DIR/.version)"
     paths:
     - $ARTIFACTS
