@@ -32,13 +32,13 @@ allprojects {
 
 version = "7.1.0"
 group= "the_fireplace.netheressence"
-archivesBaseName = "NetherEssence-Forge-1.11"
+archivesBaseName = "NetherEssence-Forge-1.10.2"
 
 minecraft {
-    version = "1.11-13.19.0.2153"
+    version = "1.10.2-12.18.2.2171"
     runDir = "run"
     replace '${version}', project.version
-    mappings = "snapshot_20161119"
+    mappings = "stable_29"
 }
 
 dependencies {
@@ -96,7 +96,7 @@ curseforge {
     id = '238223'
     changelog = file("changelog.txt")
     releaseType = 'release'
-    addGameVersion '1.11'
+    addGameVersion '1.10.2'
 	addGameVersion 'Java 8'
 
     mainArtifact(jar) {
@@ -118,7 +118,7 @@ modsIO {
     project{
 		artifact = new File(jar.destinationDir, archivesBaseName+"-"+version+".jar")
 		modid = "1224"
-		minecraft = "1.11"
+		minecraft = "1.10.2"
 		try{changelog = file('changelog.txt').text}catch(Exception e){changelog=""}
 		tag = ""
 		current = true
