@@ -11,7 +11,7 @@ import net.minecraftforge.fml.common.eventhandler.SubscribeEvent
 class ForgeEvents {
 	@SubscribeEvent
 	def stackExpire(event: ItemExpireEvent) {
-		if (!event.isCanceled && !event.getEntity.world.isRemote && !event.getEntityItem.getEntityItem.isEmpty && !event.getEntityItem.cannotPickup) {
+		if (!event.isCanceled && !event.getEntity.world.isRemote && event.getEntityItem.getEntityItem != null && !event.getEntityItem.cannotPickup) {
 			DeadStackData.getInstance.deadStacks.add(event.getEntityItem.getEntityItem.writeToNBT(new NBTTagCompound).toString)
 		}
 	}
